fix scrollbar bug in footer component

--- a/src/components/modules/user/map/style.sass
+++ b/src/components/modules/user/map/style.sass
@@ -15,7 +15,7 @@
 	right: 30px
 	text-align: center
 	top: 105px
-	width: 60%
+	width: 30%
 	z-index: 10
 	.close
 		font-size: 20px
