--- a/src/ui/footer/footer.sass
+++ b/src/ui/footer/footer.sass
@@ -3,7 +3,6 @@
     display: grid
     grid-template-columns: 1fr 1fr 1fr 1fr
     justify-items: center
-    position: absolute
     width: 100%
     top: 100%
     z-index: 2
